--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "node server.js"
+    "start:prod": "node server.js",
+    "build": "npm install && npm run build"
   },
   "author": "irakli mikava",
   "license": "ISC",
