--- a/package.json
+++ b/package.json
@@ -5,20 +5,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "start:prod": "node server.js",
-    "build": "npm install && npm run build"
+    "start": "nodemon server.js"
   },
   "author": "irakli mikava",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.370.0",
-    "aws-sdk": "^2.1416.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "greenlock-express": "^4.0.3",
     "mongoose": "^7.3.4",
     "nodemon": "^3.0.1"
   }
