--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "build": "vite build",
+    "start": "node server.js",
+    "dev": "vite",
+    "deploy": "npm install && npm run build"
   },
   "author": "irakli mikava",
   "license": "ISC",
